[package]
name = "tiketcdn"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-http = { version = "0.6.8", features = ["cors"] }
axum = { version = "0.8.8", features = ["multipart"] }
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.13.0"
image = "0.25.10"
lru = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.51.1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4"] }
